# bpr

./: README.md  build_faiss_index.py  build_passage_db.py  evaluate_reader.py  evaluate_retriever.py  generate_embeddings.py  pyproject.toml  requirements.txt  train_biencoder.py  train_reader.py
bpr/: __init__.py  biencoder.py  index.py  passage_db.py  reader.py  reader_dataset.py  retriever.py
